plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.company.calendar'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'com.h2database:h2:2.2.224'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.junit.jupiter:junit-jupiter-api'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

	//Spring Boot Starter for Web (controllers, REST endpoints)
	implementation 'org.springframework.boot:spring-boot-starter-web'

	//Spring Boot Starter for Logging (for SLF4J and Logback)
	implementation 'org.springframework.boot:spring-boot-starter-logging'

	// Spring Boot Starter for JPA if using a DB-backed `BasketRepository`
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Optional: Jackson (if serializing JSON)
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// Lombok
	// Optional: Lombok (if you use annotations like @Getter, @Setter)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Optional: For testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Spring Boot Starter for Web (controllers, REST endpoints)
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.1.0'
	implementation 'io.github.resilience4j:resilience4j-timelimiter:2.1.0'
	implementation 'io.github.resilience4j:resilience4j-retry:2.1.0'
	implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.1.0'

	// Optional but recommended for metrics and actuator support
	implementation 'io.github.resilience4j:resilience4j-micrometer:2.1.0'
	implementation 'io.micrometer:micrometer-core'

	// Spring Boot Actuator (if using health/metrics endpoint)
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'com.fasterxml.jackson.core:jackson-databind' // for ObjectMapper
	implementation 'com.google.code.gson:gson:2.10.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
